--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   },
   "homepage": "https://github.com/ooby/rmisint#readme",
   "dependencies": {
+    "moment": "^2.18.1",
     "nconf": "^0.8.5",
-    "refbooks": "^0.0.5",
+    "refbooks": "^0.0.6",
     "rmisjs": "^0.4.3"
   },
   "devDependencies": {
-    "mocha": "^3.5.0",
-    "chai": "^4.1.1",
+    "mocha": "^3.5.3",
+    "chai": "^4.1.2",
     "chai-http": "^3.0.0"
   }
 }
