--- a/package.json
+++ b/package.json
@@ -5,8 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "pm2 start index.js -i 1 --name rmisint --log-date-format 'YYYY-MM-DD HH:mm:ss'",
+    "precommit": "lint-staged",
     "init-upload": "pm2 start initUpload.js -i 1 --name rmisint-upload --no-autorestart",
     "test": "mocha ./test --timeout 30000"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -32,6 +39,8 @@
   "devDependencies": {
     "mocha": "^3.5.3",
     "chai": "^4.1.2",
-    "chai-http": "^3.0.0"
+    "chai-http": "^3.0.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.0"
   }
 }
