--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "rmisint",
-  "version": "0.1.9",
+  "version": "0.2.0",
   "description": "RMIS integration org",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js -i 1 --name rmisint --log-date-format 'YYYY-MM-DD HH:mm:ss'",
+    "start": "node index.js",
+    "pm2": "pm2 start index.js -i 1 --name rmisint --log-date-format 'YYYY-MM-DD HH:mm:ss'",
     "precommit": "lint-staged",
     "init-upload": "pm2 start initUpload.js -i 1 --name rmisint-upload --no-autorestart",
     "test": "mocha ./test --timeout 30000"
@@ -31,16 +32,16 @@
   },
   "homepage": "https://github.com/ooby/rmisint#readme",
   "dependencies": {
-    "moment": "^2.22.2",
+    "moment": "^2.24.0",
     "nconf": "^0.10.0",
     "refbooks": "^0.0.8",
     "rmisjs": "^0.6.12"
   },
   "devDependencies": {
-    "mocha": "^5.2.0",
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.2"
+    "mocha": "^6.0.2",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5"
   }
 }
