--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "rmisint",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "RMIS integration org",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "pm2": "pm2 start index.js -i 1 --name rmisint --log-date-format 'YYYY-MM-DD HH:mm:ss'",
-    "precommit": "lint-staged",
     "init-upload": "pm2 start initUpload.js -i 1 --name rmisint-upload --no-autorestart",
     "test": "mocha ./test --timeout 30000"
   },
   "lint-staged": {
-    "*.js": [
+    "**/*.js": [
       "eslint --fix",
       "git add"
     ]
@@ -35,13 +34,19 @@
     "moment": "^2.24.0",
     "nconf": "^0.10.0",
     "refbooks": "^0.0.8",
-    "rmisjs": "^0.6.12"
+    "rmisjs": "^0.7.0"
   },
   "devDependencies": {
-    "mocha": "^6.0.2",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.5"
+    "eslint": "^5.16.0",
+    "husky": "^2.1.0",
+    "lint-staged": "^8.1.5",
+    "mocha": "^6.1.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
